updated code with the changes required to process raster data

--- a/data/notebooks/2_sky_locations.ipynb
+++ b/data/notebooks/2_sky_locations.ipynb
@@ -53,7 +53,7 @@
     "\n",
     "dotenv.load_dotenv()\n",
     "\n",
-    "scripts_dir = Path(\".\").joinpath(\"src\")\n",
+    "scripts_dir = Path(\"../.\").joinpath(\"src\")\n",
     "if scripts_dir not in sys.path:\n",
     "    sys.path.insert(0, scripts_dir.resolve().as_posix())\n",
     "\n",
@@ -179,8 +179,7 @@
     "translations_csv_url = \"vizzuality_processed_data/gadm/preprocess/locations_translated.csv\"\n",
     "translations_csv_output = input_path.joinpath(translations_csv_url.split(\"/\")[-1])\n",
     "country_commitments_url = \"30x30 National Commitments - MPAtlas Country Targets.csv\"\n",
-    "country_commitments_output = input_path.joinpath(country_commitments_url.split(\"/\")[-1])\n",
-    "\n"
+    "country_commitments_output = input_path.joinpath(country_commitments_url.split(\"/\")[-1])\n"
    ]
   },
   {
@@ -543,7 +542,7 @@
     "    .pipe(add_envelope)\n",
     "    .pipe(add_location_iso)\n",
     "    .pipe(expand_multiple_locations)\n",
-    "    .pipe(add_region_iso, 'iso')\n",
+    "    .pipe(add_region_iso, \"iso\")\n",
     "    .pipe(calculate_eez_area)\n",
     "    .pipe(add_bbox)\n",
     "    .pipe(add_groups_and_members, \"marine\")\n",
@@ -553,24 +552,38 @@
     "        columns={\n",
     "            \"AREA_KM2\": \"total_marine_area\",\n",
     "            \"location_type\": \"type\",\n",
-    "            \"bounds\": 'marine_bounds'\n",
+    "            \"bounds\": \"marine_bounds\",\n",
     "        }\n",
     "    )\n",
-    "    .pipe(lambda df: df.drop(\n",
-    "        columns=list(\n",
-    "            set(df.columns) -\n",
-    "            set([\"code\", \"name\", \"name_es\", \"name_fr\", \"total_marine_area\", \"marine_bounds\", \"type\", \"groups\", \"id\"])\n",
+    "    .pipe(\n",
+    "        lambda df: df.drop(\n",
+    "            columns=list(\n",
+    "                set(df.columns)\n",
+    "                - set(\n",
+    "                    [\n",
+    "                        \"code\",\n",
+    "                        \"name\",\n",
+    "                        \"name_es\",\n",
+    "                        \"name_fr\",\n",
+    "                        \"total_marine_area\",\n",
+    "                        \"marine_bounds\",\n",
+    "                        \"type\",\n",
+    "                        \"groups\",\n",
+    "                        \"id\",\n",
+    "                    ]\n",
+    "                )\n",
+    "            )\n",
     "        )\n",
-    "    ))\n",
+    "    )\n",
     "    .reset_index(drop=True)\n",
     ")\n",
     "\n",
     "# Process GADM data (land data)\n",
     "locations_land = (\n",
     "    gpd.read_file(pipe_gadm_dir.get_step_fmt_file_path(prev_step, \"shp\"))\n",
-    "    .rename(columns={\"GID_0\": \"iso\", 'area_km2': 'AREA_KM2'})\n",
+    "    .rename(columns={\"GID_0\": \"iso\", \"area_km2\": \"AREA_KM2\"})\n",
     "    .pipe(add_envelope)\n",
-    "    .pipe(add_region_iso, 'iso')\n",
+    "    .pipe(add_region_iso, \"iso\")\n",
     "    .pipe(calculate_gadm_area)\n",
     "    .pipe(add_bbox)\n",
     "    .pipe(add_groups_and_members, \"land\")\n",
@@ -580,25 +593,43 @@
     "        columns={\n",
     "            \"AREA_KM2\": \"total_terrestrial_area\",\n",
     "            \"location_type\": \"type\",\n",
-    "            \"bounds\": \"terrestrial_bounds\"\n",
+    "            \"bounds\": \"terrestrial_bounds\",\n",
     "        }\n",
     "    )\n",
     "    .pipe(map_and_generate_ids, locations_marine)\n",
-    "    .pipe(drop_unnecessary_columns, [\"code\", \"name\", \"name_es\", \"name_fr\", \"total_terrestrial_area\", \"type\", \"groups\", \"terrestrial_bounds\", \"id\"])\n",
+    "    .pipe(\n",
+    "        drop_unnecessary_columns,\n",
+    "        [\n",
+    "            \"code\",\n",
+    "            \"name\",\n",
+    "            \"name_es\",\n",
+    "            \"name_fr\",\n",
+    "            \"total_terrestrial_area\",\n",
+    "            \"type\",\n",
+    "            \"groups\",\n",
+    "            \"terrestrial_bounds\",\n",
+    "            \"id\",\n",
+    "        ],\n",
+    "    )\n",
     "    .reset_index(drop=True)\n",
     ")\n",
     "\n",
     "# Merge EEZ and GADM datasets and add marine national commitments\n",
     "combined_locations = (\n",
     "    pd.merge(\n",
-    "        locations_marine, locations_land,\n",
-    "        on=['code', 'id'],\n",
-    "        suffixes=('_marine', '_land'),\n",
-    "        how='outer'\n",
+    "        locations_marine,\n",
+    "        locations_land,\n",
+    "        on=[\"code\", \"id\"],\n",
+    "        suffixes=(\"_marine\", \"_land\"),\n",
+    "        how=\"outer\",\n",
     "    )\n",
     "    .pipe(combine_and_clean_columns)\n",
     "    .reset_index(drop=True)\n",
-    "    .pipe(lambda df: process_and_merge_commitments(df, pd.read_csv(country_commitments_output, header=1)))\n",
+    "    .pipe(\n",
+    "        lambda df: process_and_merge_commitments(\n",
+    "            df, pd.read_csv(country_commitments_output, header=1)\n",
+    "        )\n",
+    "    )\n",
     "    .pipe(set_index_and_sort)\n",
     ")\n",
     "\n",
@@ -635,8 +666,11 @@
    "outputs": [],
    "source": [
     "# Create locations_code and save in data_commons/data folder\n",
-    "(combined_locations[['id', 'code']].rename(columns={'id': 'location'})\n",
-    " .to_csv(scripts_dir.joinpath('data_commons/data/locations_code.csv'), index=False))"
+    "(\n",
+    "    combined_locations[[\"id\", \"code\"]]\n",
+    "    .rename(columns={\"id\": \"location\"})\n",
+    "    .to_csv(scripts_dir.joinpath(\"data_commons/data/locations_code.csv\"), index=False)\n",
+    ")"
    ]
   },
   {
@@ -655,14 +689,14 @@
    ],
    "source": [
     "# Upload files to bucket\n",
-    "remote_path_code = 'vizzuality_processed_data/strapi_tables/location_code.csv'\n",
-    "remote_path_table = 'vizzuality_processed_data/strapi_tables/locations.json'\n",
+    "remote_path_code = \"vizzuality_processed_data/strapi_tables/location_code.csv\"\n",
+    "remote_path_table = \"vizzuality_processed_data/strapi_tables/locations.json\"\n",
     "\n",
     "writeReadGCP(\n",
     "    credentials=mysettings.GCS_KEYFILE_JSON,\n",
     "    bucket_name=mysettings.GCS_BUCKET,\n",
     "    blob_name=remote_path_code,\n",
-    "    file=scripts_dir.joinpath('data_commons/data/locations_code.csv'),\n",
+    "    file=scripts_dir.joinpath(\"data_commons/data/locations_code.csv\"),\n",
     "    operation=\"w\",\n",
     ")\n",
     "\n",
