--- a/data/notebooks/3_sky_calculate_biomes_terrestrial.ipynb
+++ b/data/notebooks/3_sky_calculate_biomes_terrestrial.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "cf045905-6d4b-4d28-85a6-ccd0791c7ec9",
    "metadata": {},
    "outputs": [
@@ -23,11 +23,13 @@
     "import logging\n",
     "from pathlib import Path\n",
     "\n",
-    "scripts_dir = Path(\"..\").joinpath(\"src\")\n",
+    "scripts_dir = Path(\"../.\").joinpath(\"src\")\n",
     "if scripts_dir not in sys.path:\n",
     "    sys.path.insert(0, scripts_dir.resolve().as_posix())\n",
-    "    \n",
-    "formatter = logging.Formatter('%(asctime)s - %(name)s - \\x1b[38;20m %(levelname)s \\x1b[0m - %(message)s')\n",
+    "\n",
+    "formatter = logging.Formatter(\n",
+    "    \"%(asctime)s - %(name)s - \\x1b[38;20m %(levelname)s \\x1b[0m - %(message)s\"\n",
+    ")\n",
     "ch = logging.StreamHandler()\n",
     "ch.setLevel(logging.DEBUG)\n",
     "ch.setFormatter(formatter)\n",
@@ -39,15 +41,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "c4d363b0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from spatial_workspace import SpatialWorkSpace\n",
-    "# from datasets import VectorDataset, RasterDataset\n",
-    "\n",
-    "from typing import  Tuple, Iterable, Union, List, Dict\n",
+    "from typing import Tuple, Iterable, Union, List, Dict, Callable\n",
     "\n",
     "# import requests # We can download locally the data, is faster\n",
     "\n",
@@ -60,13 +59,13 @@
     "import rasterio as rio\n",
     "from dask.distributed import LocalCluster, Client\n",
     "\n",
-    "from utils import download_file, unzip_file, rm_tree\n",
-    "from processing_grid import ComputationGrid\n",
-    "from raster_processing import calculate_zonal_stats\n",
-    "from vector_utils import add_bbox\n",
-    "from vector_processing import spatial_dissolve, simplify_async, spatial_difference\n",
-    "from raster_processing_v2 import process_raster, window_generator, process_job_chunk\n",
-    "from datasets import RasterDataset\n",
+    "from v2.utils import download_file, unzip_file, rm_tree\n",
+    "from v2.processing_grid import ComputationGrid\n",
+    "from v2.raster_processing import calculate_zonal_stats\n",
+    "from v2.vector_utils import add_bbox\n",
+    "from v2.vector_processing import spatial_dissolve, simplify_async, spatial_difference\n",
+    "from v2.raster_processing_v2 import process_raster, window_generator, process_job_chunk\n",
+    "from v2.datasets import RasterDataset\n",
     "\n",
     "\n",
     "import tqdm\n",
@@ -77,14 +76,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "cc6ae8b5",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Paths and sources\n",
     "data_folder = Path(\"../data\")\n",
-    "sks_data_path = data_folder.joinpath(\"skytruth\")"
+    "sks_data_path = data_folder.joinpath(\"skytruth\")\n",
+    "sks_data_path.mkdir(parents=True, exist_ok=True)"
    ]
   },
   {
@@ -242,7 +242,6 @@
    "outputs": [],
    "source": [
     "def reclass_function(ndata: np.ndarray) -> np.ndarray:\n",
-    "\n",
     "    # Apply the value changes\n",
     "    ndata = np.where(ndata < 200, 1, ndata)  # forest\n",
     "    ndata = np.where((ndata >= 200) & (ndata < 300), 2, ndata)  # savanna\n",
@@ -253,7 +252,7 @@
     "    ndata = np.where(ndata == 505, 5, ndata)  # open water - Wetlands/open water\n",
     "    ndata = np.where((ndata >= 500) & (ndata < 600), 5, ndata)  # wetlands - Wetlands/open water\n",
     "    ndata = np.where(ndata == 984, 5, ndata)  # wetlands - Wetlands/open water\n",
-    "    ndata = np.where(ndata == 910, 5, ndata)  # wetlands - Wetlands/open water \n",
+    "    ndata = np.where(ndata == 910, 5, ndata)  # wetlands - Wetlands/open water\n",
     "    ndata = np.where((ndata >= 600) & (ndata < 800), 6, ndata)  # rocky/mountains\n",
     "    ndata = np.where((ndata >= 800) & (ndata < 900), 7, ndata)  # desert\n",
     "    ndata = np.where((ndata >= 1400) & (ndata < 1500), 8, ndata)  # ag/urban - Artificial\n",
@@ -271,13 +270,17 @@
    "outputs": [],
    "source": [
     "def process_raster_v2(\n",
-    "    raster_path: Path, output_path: Path, func: callable, out_data_profile, f_args: Tuple = (), f_kwargs: Dict = {} ) -> None:\n",
-    "\n",
+    "    raster_path: Path,\n",
+    "    output_path: Path,\n",
+    "    func: Callable,\n",
+    "    out_data_profile,\n",
+    "    f_args: Tuple = (),\n",
+    "    f_kwargs: Dict = {},\n",
+    ") -> None:\n",
     "    num_workers = 200\n",
     "    window_size_x = 2048\n",
     "    window_size_y = 2048\n",
     "    with rio.open(raster_path.as_posix()) as src:\n",
-    "\n",
     "        # Create a destination dataset based on source params. The\n",
     "        # destination will be tiled, and we'll process the tiles\n",
     "        # concurrently.\n",
@@ -335,15 +338,12 @@
     "\n",
     "            futures = []\n",
     "\n",
-    "            with concurrent.futures.ThreadPoolExecutor(\n",
-    "                max_workers=num_workers\n",
-    "            ) as executor, tqdm.tqdm(\n",
-    "                total=len(windows), desc=\"Computing raster stats\", unit=\"chunk\"\n",
-    "            ) as p_bar:\n",
+    "            with (\n",
+    "                concurrent.futures.ThreadPoolExecutor(max_workers=num_workers) as executor,\n",
+    "                tqdm.tqdm(total=len(windows), desc=\"Computing raster stats\", unit=\"chunk\") as p_bar,\n",
+    "            ):\n",
     "                for idx, window in enumerate(windows):\n",
-    "                    futures.append(\n",
-    "                        executor.submit(process, window)\n",
-    "                    )\n",
+    "                    futures.append(executor.submit(process, window))\n",
     "\n",
     "                # if idx == break_after:\n",
     "                #     break\n",
@@ -356,7 +356,7 @@
     "            dst.build_overviews([2, 4, 8, 16, 32, 64], rio.enums.Resampling.mode)\n",
     "            dst.update_tags(ns=\"rio_overview\", resampling=\"average\")\n",
     "\n",
-    "    return results"
+    "    # return results"
    ]
   },
   {
@@ -393,12 +393,11 @@
     "def test_process_raster(\n",
     "    input_path: Path,\n",
     "    output_path: Path,\n",
-    "    fcn: callable,\n",
-    "    out_data_profile: Dict|None = {},\n",
+    "    fcn: Callable,\n",
+    "    out_data_profile: Dict | None = {},\n",
     "    f_kwargs: Dict = {},\n",
     "):\n",
-    "\n",
-    "    with rio.Env(VSI_CACHE= True, GDAL_CACHEMAX=1024):\n",
+    "    with rio.Env(VSI_CACHE=True, GDAL_CACHEMAX=1024):\n",
     "        i_raster = RasterDataset(input_path)\n",
     "        new_profile = i_raster.profile.copy()\n",
     "        new_profile.update(**out_data_profile) if out_data_profile else None\n",
@@ -430,9 +429,12 @@
     "        with multiprocessing.Manager() as manager:\n",
     "            # create the shared lock\n",
     "            lock = manager.Lock()\n",
-    "            with concurrent.futures.ProcessPoolExecutor(max_workers=20) as executor, tqdm.tqdm(\n",
-    "                total=len(window_chunks), desc=\"Computing raster stats\", unit=\"chunk\"\n",
-    "            ) as p_bar:\n",
+    "            with (\n",
+    "                concurrent.futures.ProcessPoolExecutor(max_workers=20) as executor,\n",
+    "                tqdm.tqdm(\n",
+    "                    total=len(window_chunks), desc=\"Computing raster stats\", unit=\"chunk\"\n",
+    "                ) as p_bar,\n",
+    "            ):\n",
     "                for idx, window in enumerate(window_chunks):\n",
     "                    futures.append(\n",
     "                        executor.submit(\n",
@@ -619,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "7184d980",
    "metadata": {},
    "outputs": [
@@ -635,29 +637,29 @@
     }
    ],
    "source": [
-    "dissolved_simp_gdf.geometry.geom_type.unique() "
+    "dissolved_simp_gdf.geometry.geom_type.unique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "f5109e65",
    "metadata": {},
    "outputs": [],
    "source": [
-    "filtered = dissolved_simp_gdf[\n",
-    "    dissolved_simp_gdf.geom_type.isin([\"Polygon\", \"MultiPolygon\"])\n",
-    "][[\"geometry\", \"iso_3\"]].reset_index(drop=True)"
+    "filtered = dissolved_simp_gdf[dissolved_simp_gdf.geom_type.isin([\"Polygon\", \"MultiPolygon\"])][\n",
+    "    [\"geometry\", \"iso_3\"]\n",
+    "].reset_index(drop=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "f99e37ee",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def convert_pix_to_area(df: gpd.GeoDataFrame, cell_size: float, col:str) -> gpd.GeoDataFrame:\n",
+    "def convert_pix_to_area(df: gpd.GeoDataFrame, cell_size: float, col: str) -> gpd.GeoDataFrame:\n",
     "    return df.assign({col: lambda x: x.col * cell_size * cell_size})"
    ]
   },
@@ -1643,16 +1645,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "32e96da9",
    "metadata": {},
    "outputs": [],
    "source": [
     "region_grid = ComputationGrid(\n",
-    "    bounds=[-180, -90, 180, 90],\n",
-    "    max_cell_size=10,\n",
-    "    crs=CRS.from_epsg(4326),\n",
-    "    grid_type=\"dense\"\n",
+    "    bounds=[-180, -90, 180, 90], max_cell_size=10, crs=CRS.from_epsg(4326), grid_type=\"dense\"\n",
     ")\n",
     "\n",
     "regions_split = region_grid.split_gdf_by_grid(gadm_data_simp, True, 0)"
@@ -1869,7 +1868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "id": "e3aa359f",
    "metadata": {},
    "outputs": [],
@@ -1880,9 +1879,7 @@
     "    )\n",
     "    protection_extent[\"frac\"] = (protection_extent[\"protected\"] / protection_extent[\"total\"]) * 100\n",
     "\n",
-    "    return (\n",
-    "        protection_extent.reset_index()\n",
-    "    )"
+    "    return protection_extent.reset_index()"
    ]
   },
   {
@@ -1909,12 +1906,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "id": "a8775e8a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "test = master_data_protection.join(master_data_protection.groupby(\"iso_3\").agg({\"total\": \"sum\"}), on=\"iso_3\", rsuffix=\"_area\").pipe(calc_area)"
+    "test = master_data_protection.join(\n",
+    "    master_data_protection.groupby(\"iso_3\").agg({\"total\": \"sum\"}), on=\"iso_3\", rsuffix=\"_area\"\n",
+    ").pipe(calc_area)"
    ]
   },
   {
@@ -2344,11 +2343,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_esp = pd.DataFrame(test_esp_total_rasterstats).reset_index().melt(\n",
-    "    \"index\", var_name=\"category\", value_name=\"count\"\n",
-    ").drop(columns=[\"index\"]).rename(columns={\"count\": \"total\"}).join(pd.DataFrame(test_esp_protected_rasterstats).reset_index().melt(\n",
-    "    \"index\", var_name=\"category\", value_name=\"count\"\n",
-    ").groupby(\"category\").agg({\"count\": \"sum\"}), on=\"category\").assign(iso_3=\"ESP\")\n",
+    "test_esp = (\n",
+    "    pd.DataFrame(test_esp_total_rasterstats)\n",
+    "    .reset_index()\n",
+    "    .melt(\"index\", var_name=\"category\", value_name=\"count\")\n",
+    "    .drop(columns=[\"index\"])\n",
+    "    .rename(columns={\"count\": \"total\"})\n",
+    "    .join(\n",
+    "        pd.DataFrame(test_esp_protected_rasterstats)\n",
+    "        .reset_index()\n",
+    "        .melt(\"index\", var_name=\"category\", value_name=\"count\")\n",
+    "        .groupby(\"category\")\n",
+    "        .agg({\"count\": \"sum\"}),\n",
+    "        on=\"category\",\n",
+    "    )\n",
+    "    .assign(iso_3=\"ESP\")\n",
+    ")\n",
     "\n",
     "test_esp[\"frac\"] = (test_esp[\"count\"] / test_esp[\"total\"]) * 100\n",
     "test_esp"
@@ -2371,7 +2381,9 @@
     ").explode([\"unique\", \"frac\"])\n",
     "\n",
     "test_total_exact_extract[\"unique\"] = test_total_exact_extract[\"unique\"].map(land_cover_classes)\n",
-    "test_total_exact_extract['total'] = test_total_exact_extract['count']* test_total_exact_extract['frac']\n",
+    "test_total_exact_extract[\"total\"] = (\n",
+    "    test_total_exact_extract[\"count\"] * test_total_exact_extract[\"frac\"]\n",
+    ")\n",
     "display(test_total_exact_extract)"
    ]
   },
@@ -2393,8 +2405,12 @@
     "#     .groupby(\"unique\")\n",
     "#     .agg({\"frac\": \"sum\", \"gid_0\": \"count\"})\n",
     "# ).reset_index()\n",
-    "test_protected_exact_extract['protected'] = test_protected_exact_extract['count'] * test_protected_exact_extract['frac']\n",
-    "test_protected_exact_extract = test_protected_exact_extract.groupby(\"unique\").agg({\"protected\": \"sum\"}).reset_index()\n",
+    "test_protected_exact_extract[\"protected\"] = (\n",
+    "    test_protected_exact_extract[\"count\"] * test_protected_exact_extract[\"frac\"]\n",
+    ")\n",
+    "test_protected_exact_extract = (\n",
+    "    test_protected_exact_extract.groupby(\"unique\").agg({\"protected\": \"sum\"}).reset_index()\n",
+    ")\n",
     "test_protected_exact_extract[\"unique\"] = test_protected_exact_extract[\"unique\"].map(\n",
     "    land_cover_classes\n",
     ")"
@@ -2448,9 +2464,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "compare_table['frac_def'] = (compare_table['protected'] / compare_table['total']) * 100\n",
-    "compare_table['frac_exact'] = (compare_table['protected_exact'] / compare_table['total_exact']) * 100\n",
-    "compare_table['frac_test'] = (compare_table['count'] / compare_table['total_test']) * 100\n",
+    "compare_table[\"frac_def\"] = (compare_table[\"protected\"] / compare_table[\"total\"]) * 100\n",
+    "compare_table[\"frac_exact\"] = (\n",
+    "    compare_table[\"protected_exact\"] / compare_table[\"total_exact\"]\n",
+    ") * 100\n",
+    "compare_table[\"frac_test\"] = (compare_table[\"count\"] / compare_table[\"total_test\"]) * 100\n",
     "\n",
     "compare_table"
    ]
@@ -2522,10 +2540,9 @@
     "    test_area.total_bounds\n",
     ")\n",
     "\n",
-    "test_wdpa = (\n",
-    "    dissolved_simp_gdf.iloc[dissolved_simp_gdf.sindex.intersection(test_area.total_bounds)]\n",
-    "    .clip(test_area.total_bounds)\n",
-    ")\n",
+    "test_wdpa = dissolved_simp_gdf.iloc[\n",
+    "    dissolved_simp_gdf.sindex.intersection(test_area.total_bounds)\n",
+    "].clip(test_area.total_bounds)\n",
     "test_filtered = test_wdpa.loc[\n",
     "    test_wdpa.geometry.geom_type.isin([\"MultiPolygon\", \"Polygon\"])\n",
     "].reset_index()\n",
