uncommented lines for data aquisition and management

--- a/data/notebooks/3_sky_calculate_biomes_terrestrial.ipynb
+++ b/data/notebooks/3_sky_calculate_biomes_terrestrial.ipynb
@@ -146,12 +146,12 @@
    "source": [
     "# To download the url needs to be signed in the browser\n",
     "\n",
-    "# local_gadm_path = sks_data_path.joinpath(\"gadm_preprocess.zip\")\n",
-    "# download_file(\n",
-    "#     \"https://storage.cloud.google.com/vector-data-raw/vizzuality_processed_data/gadm/preprocess/gadm_preprocess.zip\",\n",
-    "#     local_gadm_path,\n",
-    "# )\n",
-    "# unzip_file(local_gadm_path)"
+    "local_gadm_path = sks_data_path.joinpath(\"gadm_preprocess.zip\")\n",
+    "download_file(\n",
+    "    \"https://storage.cloud.google.com/vector-data-raw/vizzuality_processed_data/gadm/preprocess/gadm_preprocess.zip\",\n",
+    "    local_gadm_path,\n",
+    ")\n",
+    "unzip_file(local_gadm_path)"
    ]
   },
   {
@@ -182,12 +182,12 @@
    "outputs": [],
    "source": [
     "## dissolve wdpa data to get the 2024 dissolved boundaries\n",
-    "# wdpa_data = (\n",
-    "#     gpd.read_file(sks_data_path.joinpath(\"mpas_sjoin.shp\"))\n",
-    "#     .pipe(lower_case_columns)\n",
-    "#     .pipe(filter_by_extent, (-181, -91, 181, 91))\n",
-    "# )\n",
-    "# dissolved_gdf"
+    "dissolved_gdf = (\n",
+    "    gpd.read_file(sks_data_path.joinpath(\"mpas_sjoin.shp\"))\n",
+    "    .pipe(lower_case_columns)\n",
+    "    .pipe(filter_by_extent, (-181, -91, 181, 91))\n",
+    ")\n",
+    "dissolved_gdf"
    ]
   },
   {
@@ -197,13 +197,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# removed_non_poly = (\n",
-    "#     dissolved_gdf[dissolved_gdf.geometry.geom_type.isin([\"Polygon\", \"MultiPolygon\"])]\n",
-    "#     .reset_index(drop=True)\n",
-    "#     .copy()\n",
-    "# )\n",
+    "removed_non_poly = (\n",
+    "    dissolved_gdf[dissolved_gdf.geometry.geom_type.isin([\"Polygon\", \"MultiPolygon\"])]\n",
+    "    .reset_index(drop=True)\n",
+    "    .copy()\n",
+    ")\n",
     "\n",
-    "# del dissolved_gdf"
+    "del dissolved_gdf"
    ]
   },
   {
@@ -362,30 +362,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "372baccb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "local_biome_raster_path = sks_data_path.joinpath(\n",
-    "    \"iucn_habitatclassification_composite_lvl1_ver004.tif\"\n",
-    ")\n",
-    "output_path = local_biome_raster_path.parent.joinpath(local_biome_raster_path.stem + \"_reclass.tif\")\n",
-    "\n",
-    "output_path.unlink(missing_ok=True)\n",
-    "\n",
-    "out_data_profile = {\n",
-    "    \"dtype\": rio.uint8,\n",
-    "    \"count\": 1,\n",
-    "    \"compress\": \"lzw\",\n",
-    "    \"tiled\": True,\n",
-    "    \"blockxsize\": 512,\n",
-    "    \"blockysize\": 512,\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "367a0f1b",
    "metadata": {},
    "outputs": [],
@@ -456,6 +432,30 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "372baccb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "local_biome_raster_path = sks_data_path.joinpath(\n",
+    "    \"iucn_habitatclassification_composite_lvl1_ver004.tif\"\n",
+    ")\n",
+    "output_path = local_biome_raster_path.parent.joinpath(local_biome_raster_path.stem + \"_reclass.tif\")\n",
+    "\n",
+    "output_path.unlink(missing_ok=True)\n",
+    "\n",
+    "out_data_profile = {\n",
+    "    \"dtype\": rio.uint8,\n",
+    "    \"count\": 1,\n",
+    "    \"compress\": \"lzw\",\n",
+    "    \"tiled\": True,\n",
+    "    \"blockxsize\": 512,\n",
+    "    \"blockysize\": 512,\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "dd58127c",
    "metadata": {},
    "outputs": [],
@@ -504,27 +504,27 @@
    "outputs": [],
    "source": [
     "# To download the url needs to be signed in the browser\n",
-    "# local_biome_raster_path = sks_data_path.joinpath(\n",
-    "#     \"iucn_habitatclassification_composite_lvl1_ver004.tif\"\n",
-    "# )\n",
-    "# download_file(\n",
-    "#     \"https://storage.cloud.google.com/vector-data-raw/terrestrial/jung_etal_2020/iucn_habitatclassification_composite_lvl1_ver004.tif\",\n",
-    "#     local_biome_raster_path,\n",
-    "# )\n",
+    "local_biome_raster_path = sks_data_path.joinpath(\n",
+    "    \"iucn_habitatclassification_composite_lvl1_ver004.tif\"\n",
+    ")\n",
+    "download_file(\n",
+    "    \"https://storage.cloud.google.com/vector-data-raw/terrestrial/jung_etal_2020/iucn_habitatclassification_composite_lvl1_ver004.tif\",\n",
+    "    local_biome_raster_path,\n",
+    ")\n",
     "# reclass the original raster\n",
-    "# reclassified_biome_raster_path = reclassify_raster(local_biome_raster_path)"
+    "reclassified_biome_raster_path = reclass_function(local_biome_raster_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "d97b6ecd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "reclassified_biome_raster_path = sks_data_path.joinpath(\n",
-    "    \"iucn_habitatclassification_composite_lvl1_ver004_reclass.tif\"\n",
-    ")"
+    "# reclassified_biome_raster_path = sks_data_path.joinpath(\n",
+    "#     \"iucn_habitatclassification_composite_lvl1_ver004_reclass.tif\"\n",
+    "# )"
    ]
   },
   {
