--- a/data/notebooks/6_sky_ontheflyanalysis.ipynb
+++ b/data/notebooks/6_sky_ontheflyanalysis.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "77e2b0bb",
    "metadata": {},
    "outputs": [],
@@ -97,7 +97,7 @@
     "import pandas as pd\n",
     "import geopandas as gpd\n",
     "\n",
-    "scripts_dir = Path(\"../..\").joinpath(\"src\")\n",
+    "scripts_dir = Path(\"../.\").joinpath(\"src\")\n",
     "if scripts_dir not in sys.path:\n",
     "    sys.path.insert(0, scripts_dir.resolve().as_posix())\n",
     "\n",
