start updating homepage copy

--- a/frontend/translations/en.json
+++ b/frontend/translations/en.json
@@ -61,7 +61,7 @@
       "impact": "Impact",
       "context": "Context",
       "section-services-title": "An entry point for 30x30",
-      "section-services-description": "In partnership with <b>Bloomberg Ocean Initiative, SkyTruth</b> is developing an entry point for 30x30 stakeholders. The tools below enable you to track the world’s progress toward 30x30, draw new protected areas, and find additional tools and organizations fighting for the protection of marine and terrestrial ecosystems.",
+      "section-services-description": "In partnership with Bloomberg Ocean Initiative, SkyTruth has developed an entry point for 30x30 stakeholders, enabling everyone to track the world’s progress toward 30x30, draw new protected areas, and find additional tools and organizations working for the protection of marine and terrestrial ecosystems.",
       "section-impact-title": "What’s at stake?",
       "section-impact-subsection-1-title": "Biodiversity",
       "section-impact-subsection-1-description-1": "Today, {protectedOceanPercentage} percent of the world’s ocean and <a1>{protectedLandPercentage} percent of its land area</a1> are protected. Wildlife populations - mammals, birds, fish, and other species - have decreased by nearly 70% since 1970, with up to <a2>{threatenedSpeciesPercentage} species threatened with extinction</a2>.",
@@ -110,16 +110,16 @@
     },
     "homepage-link-cards": {
       "card-1-title": "Progress Tracker",
-      "card-1-subtitle": "A high-level, interactive map and dashboard communicating baselines and progress at global and national scales.",
-      "card-1-description": "The Progress Tracker enables users to understand global and national level progress at a glance, including accessible statistics and interactive data visualizations. The platform not only enables users to see the location of currently protected and conserved areas, but also allows them to overlay the location of key habitats and areas recommended by expert analysis as critical areas to protect for biodiversity.",
+      "card-1-subtitle": "A high-level, interactive map and dashboard tracking conservation progress at global and national scales.",
+      "card-1-description": "The Progress Tracker enables users to understand global and national level habitat protection progress at a glance, including (1) How much of our lands and waters are protected, and (2) How effective those protections are, using assessment data from MPAtlas and ProtectedSeas. The platform not only enables users to see the location of currently protected and conserved areas, but also allows them to overlay the location of key habitats and areas recommended by expert analysts as critical areas to protect for biodiversity.",
       "card-1-link": "Go to the Progress Tracker",
       "card-2-title": "Conservation Builder",
-      "card-2-subtitle": "A lightweight, interactive scenario building and visualization tool for evaluating conservation and protection scenarios that can provide potential pathways to achieving 30x30 goals.",
-      "card-2-description": "The Conservation Builder enables users to view existing protected areas, draw potential protected areas, dynamically illustrate the effects of proposed regions on progress toward 30x30, and quickly generate information about the proposed protected area from disparate data sources, including 30x30 research-based recommendations for areas to protect (e.g., Pew, Sala et al., Zhao et al., etc.) and the location of key habitats.",
+      "card-2-subtitle": "A lightweight, interactive scenario building and visualization tool for evaluating conservation and protection scenarios.",
+      "card-2-description": "The Conservation Builder enables users to view existing protected areas, draw potential protected areas, and dynamically illustrate the effects of proposed regions on progress toward 30x30. It also provides easy access to data about key habitat locations and research-based conservation recommendations to help identify key biodiversity areas to be considered for protection.",
       "card-2-link": "Go to the Conservation Builder",
       "card-3-title": "Knowledge Hub",
-      "card-3-subtitle": "A navigation hub guiding users toward other helpful 30x30 resources",
-      "card-3-description": "The Knowledge Hub will link users to other 30x30 focused organizations and efforts, making it easier for stakeholders at all levels to discover and make use of advanced resources for monitoring, planning, and decision making.",
+      "card-3-subtitle": "A navigation hub guiding users toward other helpful 30x30 resources.",
+      "card-3-description": "The Knowledge Hub will link users to other 30x30-focused organizations and efforts, making it easier for stakeholders at all levels to discover and make use of advanced resources for monitoring, planning, and decision making.",
       "card-3-link": "Go to the Knowledge Hub"
     },
     "homepage-earth-surface-coverage": {
