update copy and add subsection componenet

--- a/frontend/translations/en.json
+++ b/frontend/translations/en.json
@@ -31,16 +31,16 @@
       "team-and-funders": "Team & Funders",
       "intro-title": "A global movement to protect 30% of the world’s lands and waters by 2030.",
       "section-definition-title": "What is 30x30",
-      "section-definition-description": "30x30 is a global movement to <b>protect 30% of the world’s lands and waters by 2030</b>. This target has been <a>formally adopted by nearly every country</a> on earth, and ecosystem protection is being advanced and monitored by governments, NGOs, and local communities around the world.",
-      "section-problem-title": "Why build a 30x30 hub?",
-      "section-problem-description-1": "With only a few years left between now and 2030, the world is pushing hard to preserve our critical ecosystems. Biodiversity conservation is moving faster than ever, and a host of new organizations, tools, and campaigns are emerging every day. Even for conservation professionals, it can be hard to keep up. And for anyone new to 30x30, it can be hard to know where to start or how to get involved.",
-      "section-problem-description-2": "We are building the 30x30 hub to unify these critical tools and information streams in a single location that provides an accessible entry point for getting informed and engaged in 30x30.",
-      "section-highlighted-1-title": "We are a hub, not a destination. We want visitors to be able to answer <b>three questions</b>.",
+      "section-definition-description": "30x30 is a global movement to protect 30% of the world’s lands and waters by 2030. This target has been <a>formally adopted by nearly every country</a> on earth, and ecosystem protection is being advanced and monitored by governments, NGOs, and local communities around the world.",
+      "section-problem-title": "Why build a 30x30 Tracker?",
+      "section-problem-description-1": "With only a few years left between now and 2030, the world is pushing hard to preserve our critical ecosystems. Biodiversity conservation is moving faster than ever, and a host of new organizations, tools, and campaigns are emerging every day.",
+      "section-problem-description-2": "We created the 30x30 Progress Tracker to unify these information streams in a single location that provides an accessible entry point for getting informed and engaged in 30x30.",
+      "section-highlighted-1-title": "We want visitors to be able to answer <b>three questions</b>.",
       "section-highlighted-1-question-1": "How is the world progressing toward 30x30?",
       "section-highlighted-1-question-2": "How much more of our lands and waters do we need to protect to reach the 30% goal?",
       "section-highlighted-1-question-3": "What resources are available to learn more about 30x30, get involved, and take action?",
       "section-data-partners-title": "Who are our data partners?",
-      "section-data-partners-description": "We depend on the expertise and efforts of key data partners to power our maps and dashboards. Each of these datasets represents a tremendous amount of effort to assess and measure the effectiveness of ecosystem protections globally, and is critical to the success of 30x30.",
+      "section-data-partners-description": "We depend on the expertise and efforts of key data partners to power our maps and dashboards. Each of these datasets requires a tremendous amount of effort by our partners to create, curate, and maintain. High-quality, reliable, timely data are critical for assessing and measuring the effectiveness of ecosystem protections globally, which in turn is critical to ensuring the success of 30x30.",
       "section-wdpa-title": "The World Database on Protected Areas (WDPA)",
       "section-wdpa-description": "<a>The World Database on Protected Areas (WDPA)</a>, maintained by Protected Planet, provides a comprehensive global inventory of the world's marine and terrestrial protected areas. The WDPA provides official protected area boundaries that have been self-reported by 245 countries around the world. WDPA data powers our statistics on total area protected per country and globally.",
       "section-mpatlas-title": "The Marine Protection Atlas (MPAtlas)",
@@ -64,7 +64,7 @@
       "section-services-description": "In partnership with Bloomberg Ocean Initiative, SkyTruth has developed an entry point for 30x30 stakeholders, enabling everyone to track the world’s progress toward 30x30, draw new protected areas, and find additional tools and organizations working for the protection of marine and terrestrial ecosystems.",
       "section-impact-title": "What’s at stake?",
       "section-impact-subsection-1-title": "Biodiversity",
-      "section-impact-subsection-1-description-1": "Today, {protectedOceanPercentage} percent of the world’s ocean and <a1>{protectedLandPercentage} percent of its land area</a1> are protected. Wildlife populations - mammals, birds, fish, and other species - have decreased by nearly 70% since 1970, with up to <a2>{threatenedSpeciesPercentage} species threatened with extinction</a2>.",
+      "section-impact-subsection-1-description-1": "Wildlife populations - mammals, birds, fish, and other species - have decreased by nearly 70% since 1970, with up to <a1>{threatenedSpeciesPercentage} species threatened with extinction</a1>. Habitat loss is the main driver of this ongoing extinction crisis. Today -- according to government figures -- only {protectedOceanPercentage} percent of the world’s ocean <a2>{protectedLandPercentage} percent of its land area</a2> are protected.",
       "section-impact-subsection-1-description-2": "Protecting 30 percent of the world’s land and ocean habitats by 2030 will help these threatened species recover and survive, preserving them for future generations.",
       "section-impact-subsection-2-title": "Climate",
       "section-impact-subsection-2-description-1": "Earth’s climate and biodiversity are inextricably linked. A stable climate helps ecosystems thrive, and protected ecosystems help slow rising global temperatures and buffer us from the worst impacts of climate change, including floods, wildfires, and food insecurity.",
