--- a/frontend/translations/en.json
+++ b/frontend/translations/en.json
@@ -47,12 +47,12 @@
       "section-mpatlas-description": "<a>The Marine Protection Atlas (MPAtlas)</a>, which is produced by the Marine Conservation Institute, builds on the WDPA dataset to provide a science-based, independent assessment of the Stage of Establishment and Level of Protection per marine protected area (MPA). MPAtlas data powers our statistics on Level of Protection per MPA.",
       "section-protectedseas-title": "ProtectedSeas",
       "section-protectedseas-description": "<a>ProtectedSeas</a> maintains the world’s largest database of regulatory information for MPAs, with information on over 21,000 marine and coastal protected areas around the world. ProtectedSeas data powers our Level of Fishing Protection (LFP) score, which describes the degree to which fishing activity has been restricted in MPAs.",
-      "section-future-objectives-title": "What’s next for the 30x30 hub?",
+      "section-future-objectives-title": "What’s next for the 30x30 Tracker?",
       "section-future-objectives-description": "This web portal was built with support from the <a>Bloomberg Ocean Initiative</a>, so we started by focusing on marine protection, with the goal of creating a one-stop entry point for getting engaged and informed on 30x30.",
-      "section-highlighted-2-title": "Next, we're extending the hub to include <b>terrestrial ecosystems</b>.",
+      "section-highlighted-2-title": "Next, we're extending the hub to include <b>terrestrial protection effectiveness</b>.",
       "section-highlighted-2-description": "Our goal of creating a <b>one-stop entry point</b> for getting engaged and informed on 30x30.",
       "section-team-and-funders-title": "Who is behind this project?",
-      "section-team-and-funders-description": "Discover our team and trusted partner companies. At the core of our accomplishments are the dedicated individuals who bring expertise and commitment to the 30x30 Project",
+      "section-team-and-funders-description": "The 30x30 Progress Tracker is built by SkyTruth in collaboration with trusted partners, working to provide transparent, data-driven insights on global conservation progress. Our team combines technical expertise with a deep commitment to protecting biodiversity and ensuring accountability.",
       "section-team-title": "Team",
       "section-funders-title": "Funders"
     },
